# ai-study

./: .gitignore  AGENTS.md  README.md  test.py
01_GitHub仓库文件/: AGENTS.md  Codex从需求到交付完整链路使用文档.md  Codex会话复盘与个人风格档案.md  README.md
01_GitHub仓库文件/Claude Code 学习手册/: .gitattributes  LICENSE  README.md
01_GitHub仓库文件/fastapi_file/: README.md  depends.py  fastapi_exception.py  first.py  orm_01.py  orm_02.py  request_body.py  sync_async.py
01_GitHub仓库文件/hello-agents/: fix_bold_format.py
01_GitHub仓库文件/hello-agents/Co-creation-projects/meiguanxiHXX-historyReviewAgent/: README.md  pyproject.toml  run_web.py
01_GitHub仓库文件/hello-agents/Co-creation-projects/meiguanxiHXX-historyReviewAgent/historical_review/: __init__.py  config.py  ddg_search.py  debate_orchestrator.py  wiki_tools.py
01_GitHub仓库文件/hello-agents/Co-creation-projects/meiguanxiHXX-historyReviewAgent/historical_review/web/: __init__.py  app.py
01_GitHub仓库文件/hello-agents/Co-creation-projects/meiguanxiHXX-historyReviewAgent/historical_review/web/static/: app.js  index.html  style.css
01_GitHub仓库文件/mysql/: MYSQL内容笔记.md
01_GitHub仓库文件/process_thread_coroutine/: flask_process_pool.py  flask_thread_pool.py  lock.py
deep_learning/day01/: Calltest.py  day01-dateloader.py  day01-datesets-transforms.py  day01-kernel.py  day01-tensorboard.py  day01-transforms-test.py  (+1 more)
fastapi_file/: README.md  first.py  middleware.py  orm_01.py  request_body.py
hello-agents/: README.md  README_EN.md
process_thread_coroutine/: blog_craw.py  multi_thread_craw.py  readme.md  thread_process_cpu_bound.py  tread_pool.py
(+375 files in other folders)
